# dotfiles

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  GEMINI.md  README.md  bootstrap.sh  create_user.sh  install.sh  test.sh  verify-colors.sh
.githooks/: pre-commit
Configs/20-fonts/: .fontlist
Configs/99-zsh/: .ripgreprc  .tmux.conf  .zshared.zwc  .zshenv  .zshrc.zwc
Configs/git/: .gitconfig  .gitignore
Configs/terraform_wsl/: .terraformrc
Configs/tmux/: .tmux-colors  .tmux.conf  .tmux.conf.local  (+1 more)
Configs/zsh/: .aliases  .aliases.zwc  .ansible-env  .dircolors  .gitignore  .load_ssh  .paths  .ripgreprc  .theme-colors  .tmux.conf.local  .zimrc  .zimsh  .zlogin  .zlogout  .znaprc  .znaprc.zwc  .zplugins  .zprofile  .zshared  .zshared.zwc  .zshenv  .zshrc  _tmuxinator  pyproject.toml
Configs/zsh/.config/.zplugin.d/: environment.zsh  git-info.zsh  git.zsh  input.zsh  prompt-pwd  ssh.zsh  termtitle.zsh  zsh-256-color.zsh  zsh-abbr.zsh  zsh-autosuggestions.zsh  zsh-completions.zsh  zsh-syntax-highlighting.zsh
Configs/zsh/.config/zplugin.d/: environment.zsh  fzf-tab.zsh  input.zsh  prompt-pwd.zsh  pure.zsh  termtitle.zsh  zsh-autosuggestions.zsh  zsh-bat.zsh  zsh-completions.zsh  zsh-history-substring-search.zsh  zsh-syntax-highlighting.zsh  zsh-thefuck.zsh  zsh-you-should-use.zsh
Configs/zsh/.config/zsh-patina/: config.toml
Configs/zsh/.local/share/zsh/site-functions/: _add_to_path  _alias  _append_to_path  _double_dot_expand  _download_znap  _eza  _is_mounted  _is_wsl  _load_aliases  _load_keybinds  _load_paths  _load_plugins  _load_terminfo  _load_znap  _mise  _normalize_path_entry  _prepend_to_path  _setup_trash  clean  docker  findfz  load_ssh_identities  rehook  relink  shell  start_agent  trm  zdebug  ztrace
Configs/zsh/.zim/: init.zsh
Configs/zsh/completions/: alias-completions.zsh
Docs/: COLOR_CONFLICT_RESOLUTION.md  IMPLEMENTATION_SUMMARY.md  TMUX_COLORS.md  TOOL_COLOR_REFERENCE.md
Hooks/: README.md
asdf/: .tool-versions
bash/: .aliases  .bashrc  .dircolors
ca/: ca.crt
docker/: config.json
dotfiles/: .bashrc  .gitconfig  .gitmodules  .tmuxinator.sh  .zimrc  .zprofile  .zshenv  .zshrc
git/: .gitconfig
includes/: cron_jobs.sh  functions.sh
python/: requirements.txt
tmux/: .tmux.conf
zim/: init.zsh
zsh/: .zimrc  .zprofile  .zshenv  .zshrc  install_modules.zsh
(+234 files in other folders)
