[project]
# Ansible managed: see .github/co-pilot-instructions.md for compliance details
name = "Default"
version = "0.0.1"
description = "Manages the default virtual environment"
authors = [{ name = "mfaine", email = "mark.faine@nasa.gov" }]
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "ansible (==9.5.1)",
    "ansible-lint>=25.9.0",
    "ansible-runner>=2.4.1",
    "click>=8.2.1",
    "genson>=1.3.0",
    "passlib (>=1.7.4,<2.0.0)",
    "requests==2.32.5",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "bandit>=1.7.9",
    "bump2version>=1.0.1",
    "isort>=5.13.2",
    "pre-commit>=4.2.0",
    "molecule>=25.6.0",
    "molecule-docker>=2.1.0",
    "docker==7.1.0",
    "safety>=3.2.0",
    "genson>=1.3.0",
    "detect-secrets>=1.5.0",
]
docs = [
    "antsibull-docs>=2.16.3",
    "css-inline>=0.14.0",
    "docutils>=0.21.2",
    "furo>=2024.8.6",
    "ruamel-yaml>=0.18.14",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-notfound-page>=1.1.0",
    "sphinx-changelog>=1.6.0",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-autodoc-typehints>=3.1.0",
    "sphinx-click>=6.0.0",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jquery>=4.1",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinx-ansible-theme>=0.10.3",
    "htmlark>=1.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint]
extension-pkg-whitelist = "_ldap"

[tool.pylint.format]
max-line-length = 180

[tool.pylint."MESSAGES_CONTROL"]
disable = ['unused-argument', 'too-many-arguments', 'too-many-positional-arguments', 'invalid-name' ]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B601"]  # Skip assert checks and shell usage if needed

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "artifacts"]
